--- a/style.css
+++ b/style.css
@@ -1,1 +1,99 @@
-/* para el avata */
+/* para el avatar */
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+h1{
+    /* color: white; */
+    font-size: 36px;
+    text-align: center;
+    color: white;
+}
+
+h2{
+    color: black;
+    font-size: 36px;
+    text-align: center;
+}
+
+p {
+    color: #666;
+    line-height: 1.5;
+}
+
+label{
+    color: white;
+}
+
+.container{
+    border: 1px solid black;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    background-color: blue;
+}
+
+.titulo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    /* text-decoration: none; */
+}
+
+.titulo button{
+    padding: 10px;
+    text-decoration: none;
+    border-bottom: 0px;
+    background-color: blue ;
+    color: white;
+    border-radius: 10px;
+    margin: 20px;
+}
+
+.img__avatar img{
+    border-radius: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 15px;
+    /* height: 80px; */
+}
+
+.data{
+    display: flex;
+    flex-direction: column;
+}
+
+.data input{
+    text-decoration: none;
+    border-radius: 6px;
+    border: 1px solid;
+}
+
+.data_button{
+    padding: 6px;
+    border-radius: 4px;
+    background-color: rgb(0, 255, 221);
+    color: black;
+    /* text-decoration: none; */
+    outline: none;
+}
+
+.button_aventura button{
+    padding: 10px 20px;
+    background-color:rgb(0, 255, 221);;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
