--- a/style/cards.css
+++ b/style/cards.css
@@ -26,8 +26,8 @@ body{
 }
 
 .container .card{
-    width: 330px;
-    height: 300px;
+    width: 400px;
+    height: 400px;
     border-radius: 8px;
     box-shadow: 0 2px 2px rgba(91,209,215);
     overflow: hidden;
@@ -42,8 +42,8 @@ body{
 }
 
 .container .card img{
-    width: 330px;
-    height: 250px;
+    width: 400px;
+    height: 350px;
 }
 
 .container .card h3{
@@ -51,30 +51,51 @@ body{
     margin: 5px;
 }
 
-.check {
-    margin:5px 0;
+.navegacion {
+    margin: 60px;px 0;
 }
 
-.check ul{
+.navegacion ul{
     list-style: none;
     text-align: center;
 }
 
-.check ul li{
+.navegacion ul li{
     display: inline-block;
     margin-right: 10px;
 
 }
 
-.check ul li a{
+.navegacion ul li a{
     display: block;
     padding: 10px 20px;
     color: #000835;
     text-decoration: none;
-    background-image:url(../img/avion.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+    background-color:rgba(91,209,215) ;
     border-radius: 10px;
+    /* background-image: url(../img/mensaje.png);
+    background-size:600px 400px;
+    background-position: center;
+    background-clip: content-box;
+    background-repeat: no-repeat; */
+}
 
+.botones {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+button{
+    border-radius: 8px;
+    font-size: 18px;
+    width: 150px;
+    height: 30px;
+    color: #000835;
+    
+}
+
+button:hover{
+    color: #c5d5f9;
+    background-color: #3a8bff;
 }
