--- a/style/styleDest.css
+++ b/style/styleDest.css
@@ -3,6 +3,7 @@
     padding: 0;
 }
 
+
 @-webkit-keyframes focus-in-expand {
     0% {
       letter-spacing: -0.5em;
@@ -30,45 +31,16 @@
     }
   }
 
-@-webkit-keyframes kenburns-top-left {
-    0% {
-      -webkit-transform: scale(1) translate(0, 0);
-              transform: scale(1) translate(0, 0);
-      -webkit-transform-origin: 16% 16%;
-              transform-origin: 16% 16%;
-    }
-    100% {
-      -webkit-transform: scale(1.25) translate(-20px, -15px);
-              transform: scale(1.25) translate(-20px, -15px);
-      -webkit-transform-origin: top left;
-              transform-origin: top left;
-    }
-  }
-@keyframes kenburns-top-left {
-    0% {
-      -webkit-transform: scale(1) translate(0, 0);
-              transform: scale(1) translate(0, 0);
-      -webkit-transform-origin: 16% 16%;
-              transform-origin: 16% 16%;
-    }
-    100% {
-      -webkit-transform: scale(1.25) translate(-20px, -15px);
-              transform: scale(1.25) translate(-20px, -15px);
-      -webkit-transform-origin: top left;
-              transform-origin: top left;
-    }
-  }
-
 .conteiner{
     height: 80vh;
+    width: 100%;
     margin-top: 10vh;
     margin-bottom: 10vh;
     background-color: #000835;
     display: flex;
     flex-direction: column;
     font-family: sans-serif;
-    gap: 10px;
-
+    gap: 2vh;
 }
 
 .conteiner__titulo {
@@ -77,7 +49,6 @@
     justify-content: center;
     text-align: center;
     color: #ffffff;
-    height: 10%;
 }
 
 .focus-in-expand {
@@ -92,9 +63,17 @@
 .conteiner--opciones{
     display: flex;
     justify-content: space-evenly;
-    gap: 30px;
     height: 80%;
 
+}
+
+@media screen and (max-width: 767px) {
+
+  .conteiner--opciones{
+    display: flex;
+    flex-direction: column;
+    gap:30px
+  }
 
 }
 
@@ -111,25 +90,77 @@
     box-shadow: 18px 14px 0px 2px #3a8bff;
 }
 
+@media screen and (max-width: 767px) {
+
+  .opciones--opcion{
+    width: 80%;
+    height: 50%;
+    justify-content: space-between;
+    align-items: center;
+    align-self: center;
+  }
+
+}
+
+.opcion__encabezado{
+  height: 10%;
+}
+
+.opcion__destino{
+  height: 10%;
+}
+
 .opcion__imagen{
     height: 60%;
-
-    & img{
-        max-width: 100%;
-        max-height: 100%;
-        width: 500px;
-    }
+    margin-left: 10%;
+    margin-right: 10%;
+    position: relative;
 }
 
-.kenburns-top-left:hover {
-	-webkit-animation: kenburns-top-left 5s ease-out both;
-	        animation: kenburns-top-left 5s ease-out both;
+.opcion__imagen img {
+  max-width: 100%;
+  max-height: 100%;
+  width: 500px;
 }
 
-.opcion__link{
-    display: flex;
-    gap: 90px;
+.overlay {
+  position: absolute;
+  bottom: 100%;
+  left: 0;
+  right: 0;
+  background-color: #000835;
+  overflow: hidden;
+  width: 100%;
+  height:0;
+  transition: .5s ease;
+}
 
+.opcion__imagen:hover .overlay {
+  bottom: 0;
+  height: 100%;
+}
+
+.text {
+  color: white;
+  font-size: 15px;
+  font-weight: 100;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  text-align:left;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  gap: 10px;
+}
+
+@media screen and (max-width: 767px) {
+
+  .text{
+    left: 60%;
+  }
 }
 
 .opcion__link__item img{
@@ -160,3 +191,12 @@ input{
     background-color: #c5d5f9;
     font-size: 20px;
 }
+
+.text__input{
+    text-align:left;
+    color: #c5d5f9;
+    border: none;
+    background-color: #000835;
+    font-size: 15px;
+}
+
