Terminé de organizar la media queris

--- a/style/styleCards.css
+++ b/style/styleCards.css
@@ -5,6 +5,12 @@
     font-family: sans-serif;
 }
 
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
+
 body{
     background-color: #fff;
     font-family: "Montserrat", sans-serif;
@@ -15,12 +21,11 @@ body{
 .container__general{
     display: flex;
     flex-direction:column;
-    justify-content: center;
     flex-wrap: wrap;
     width: 85%; 
     height: 85%; 
     background-color: #000835;
-    margin: 3%;
+    margin: 2.5%;
     padding: 25px 5px;
     /* position: absolute; */
     /* top: 10%; */
@@ -46,18 +51,6 @@ body{
 }
 
 @-webkit-keyframes scale-in-ver-center {
-    0% {
-    -webkit-transform: scaleY(0);
-        transform: scaleY(0);
-        opacity: 1;
-    }
-    100% {
-    -webkit-transform: scaleY(1);
-        transform: scaleY(1);
-        opacity: 1;
-    }
-}
-@keyframes scale-in-ver-center {
     0% {
     -webkit-transform: scaleY(0);
         transform: scaleY(0);
@@ -121,7 +114,7 @@ body{
     height: 45px;
     line-height: 45px;
     color: #fff;
-    background: rgba(0,0,0,.4);
+    background: #00000066;
     text-align: center;
 }
 
@@ -166,15 +159,15 @@ body{
 
 .navegacion ul {
     list-style: none;
-    text-align: center;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     gap: 10px;
 }
 
 .navegacion ul li{
     border-radius: 10px;
+    width: auto;
 
 }
 
@@ -203,7 +196,7 @@ body{
         content: url(../img/aeronave.png);
         position:absolute;
         bottom: 70px;
-        right: 4px;
+        right: -8px;
         width: 100%;
         height: 4%;
         
@@ -221,7 +214,7 @@ body{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    align-items: center;
+    
 }
 
 button{
@@ -231,7 +224,7 @@ button{
     height: auto;
     color: #000835;
     padding: 5px 10px;
-    
+    margin: auto;
 }
 
 button:hover{
@@ -239,24 +232,45 @@ button:hover{
     background-color: #3a8bff;
 }
 
+
 @media screen and(max-width:767px){
     body{
         display:flex;
         flex-direction: column;
     }
 
-    .container{
-        display: flex;
-        flex-direction: column;
+    .titulo{
+        width: 85%;
+        height: 75%;
     }
     
     .navegacion {
-        display: flex;
-        flex-direction: column;
-        
+        align-items: center;
+        height: auto;
     }
+
+    .navegacion ul {
+        justify-content: center;
+        gap: 10px;
+    } 
+    .navegacion ul li a {
+        width: 100%;
+        text-align: center;
+    }
+
+    .container{
+        width: 85%;
+    }
+    .container__general{
+        width: 100%;
+        height: auto;
+        padding: 15px 5px;
+        margin: 2%;
+    }  
+
     .botones{
-        display: flex;
+        width: 100%;
+        height: auto;
     }
 }
 
@@ -269,6 +283,69 @@ button:hover{
     .container{
         display: flex;
         flex-direction: column;
+    }
+    .container__general {
+        width: 100%;
+    }
+}
+
+@media (max-width: 470px) {
+    .container {
+        flex-direction: column;
+        width: 100%;
+    }
+    
+    .titulo{
+        width: 85%;
+    }
+    .navegacion {
+        align-items: center;
+        height: auto;
+    }
+
+    .navegacion ul {
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .navegacion ul li {
+        flex: 0 1 calc(33.333% - 28px );
+        width: 100%;
+        box-sizing: border-box;
+    }
+
+    .navegacion ul li a {
+        width: 100%;
+        text-align: center;
+
+        &::before{ 
+            content: url(../img/aeronave.png);
+            position:absolute;
+            bottom: 63px;
+            right: -8px;
+            width: 100%;
+            height: 2%;
+            
+    
+            opacity: 0;
+        }
+    
+        &.selected::before{
+            opacity: 1;
+        } 
+    }
+
+    .container__general {
+        width: 100%;
+    }
+    .container {
+        width: 95%;
+    }
+    .container__general {
+        width: 100%;
+        height: auto;
+        padding: 15px 5px;
+        margin: 2%;
     }
 }
 
